fix js node